# Ffmpeg-android-ndk-example

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/infostride/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frame_extractor.cpp  frame_loader_context_jni.cpp  media_file_builder_jni.cpp  native-lib.cpp
app/src/main/java/com/infostride/myapplication/: AudioStream.kt  BasicStreamInfo.kt  FrameLoader.kt  MainActivity.kt  MediaFile.kt  MediaStream.kt  SubtitleStream.kt  VideoFileConfig.kt  VideoStream.kt
app/src/main/java/com/infostride/myapplication/creator/: MediaFileBuilder.kt  MediaFileCreator.kt  MediaType.kt  PathUtil.java
app/src/main/java/com/infostride/myapplication/displayable/: BitRateDisplayable.kt  DispositionDisplayable.kt  FrameRateDisplayable.kt  LanguageDisplayable.kt  SampleRateDisplayable.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/infostride/myapplication/: ExampleUnitTest.kt
